# CSCE452-samuel.fafel

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/project1_pubsub/lib/project1_pubsub/: controller
install/project1_pubsub/share/project1_pubsub/: package.bash  package.sh  package.xml  package.zsh
install/project2_tam/lib/project2_tam/: project2
log/: latest_build
project1_ws/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
project1_ws/log/: latest_build
project1_ws/src/project1_pubsub/: setup.cfg  setup.py
project2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
project2_ws/log/: latest_build
project2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
project2_ws/src/log/: latest_build
project2_ws/src/project2_tam/: package.xml  setup.cfg  setup.py
project3_ws/example1_output/: example1_output_0.db3
project3_ws/example2_output/: example2_output_0.db3
project3_ws/example3_output/: example3_output_0.db3
project3_ws/example4_output/: example4_output_0.db3
project3_ws/example5_output/: example5_output_0.db3
project3_ws/install/: local_setup.sh  setup.sh
project3_ws/install/project3/share/project3/: launch.py  package.bash  package.sh  package.xml  package.zsh
project3_ws/log/: latest_build
project3_ws/src/project3/: package.xml  setup.py
project4_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
project4_ws/log/: latest_build
project4_ws/src/project4/: package.xml  setup.py
(+107 files in other folders)
