<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project3</name>
  <version>0.0.1</version>
  <description>CSCE 452 Project 3 - LIDAR Sensor Data Interpretation</description>
  <maintainer email="samuel.fafel@gmail.com">samuel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend> <!-- If you are using CMake -->
  <buildtool_depend>ament_python</buildtool_depend> <!-- If you are using pure Python package -->

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>launch_ros</depend>

  <!-- Note that rosdep might not handle pip dependencies, so you may need to manually -->
  <!-- install scikit-learn or ensure it's included in your 'install_requires' in setup.py -->
  <depend>scikit-learn</depend> <!-- This is for documentation, rosdep might not install this for you -->

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
